--- a/index.html
+++ b/index.html
@@ -4,8 +4,166 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viajes Chile</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Lobster&family=Open+Sans:wght@400;700&family=PT+Sans:ital@0;1&family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    
+    <!--navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+        <div class="container px-4">
+          
+        <a class="navbar-brand " href="#" id="title"><img id="svg"  src="assets/img/viajes.svg"/>Viajes Chile</a>
+        <button class="navbar-toggler border light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Quienes somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Destacados</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+    <!--carrusel imgs-->
+    <section id="carousel" class="d-none d-sm-block">
+      <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/img/carousel2.jpg"class="d-block w-100" alt="..."/>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="..."/>
+
+            </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+
+      <!--quienes somos-->
+      <section id = "qSomos" class="container">
+        <h2 class="text-center">Quienes somos</h2>
+        <div class="row">
+          <div class="col-12 col-sm-4">
+            <i class="fa-solid fa-plane"></i>
+            <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet similique culpa veritatis perferendis molestiae at! </p>
+        </div>
+        <div class="col-12 col-sm-4">
+          <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet similique culpa veritatis perferendis molestiae at! </p>
+          <i class="fa-solid fa-mountain"></i>
+        </div>
+        <div class="col-12 col-sm-4">
+          <i class="fas fa-route"></i>
+          <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet similique culpa veritatis perferendis molestiae at! </p>
+        </div>
+      </section>
+
+      <!--destacados-->
+
+      <section id="destacados" class="container">
+        <div class="col-12">
+          <h4 class="text-center fs-2 p-5">DESTACADOS</h4>
+      </div>
+      <div class="row">            
+          <div class="col-sm-3 col-12">
+              <div class="card">
+                  <img id="lago" src="assets/img/card1.jpg" class="card-img-top" alt="c1">
+                  <div id="panqueque" class="card-body">
+                      <h5 class="card-title">Titulo</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+          </div>
+          <div class="col-sm-3 col-12">
+              <div class="card">
+                  <img  src="assets/img/card2.jpg" class="card-img-top" alt="c2">
+                  <div id="c2" class="card-body bg-blue">
+                      <h5 class="card-title">Titulo</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+          </div>
+          <div class="col-sm-3 col-12">
+              <div class="card">
+                  <img id="ic3" src="assets/img/card3.jpg" class="card-img-top" alt="c3">
+                  <div id="c3" class="card-body">
+                      <h5 class="card-title">Titulo</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+          </div>
+          <div class="col-sm-3 col-12">
+            <div class="card">
+              <img class="card-img-top" src="assets/img/card4.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Titulo</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+      </div>
+      </section>
+
+      <!--contacto-->
+
+      <section id="form-section" class="container mx-5  my-5">
+        <h2 class="mb-3 text-center p-3">CONTACTO</h2>
+  
+        <div class="col-12 mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+          <input type="text" class="form-control"  placeholder="Nombre">
+        </div>
+  
+        <div class="col-12 mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+          <input type="text" class="form-control" placeholder="Asunto">
+        </div>
+        <div class="col-12 mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+  
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </section>
+
+        <!--footer-->
+        <section id="footer" class="container p-3">
+          <div class="row">
+            <div class="col-12 col-sm-6">
+              <h4>VIAJES CHILE</h4>
+            </div>
+            <div class="col-12 col-sm-6">
+              <i class="fab fa-github-square"></i>
+              <i class="fa-brands fa-linkedin"></i>
+              <i class="fab fa-twitter-square"></i>
+              <i class="fab fa-facebook-square"></i>
+          </div>
+
+        </section>
+      <!--js-->
+      <script src="https://kit.fontawesome.com/d85944cffc.js" crossorigin="anonymous"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+      <script src="assets/scripts/script.js"></script>
 </body>
 </html>
