--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+    <nav id="myNav" class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container px-4">
           
         <a class="navbar-brand " href="#" id="title"><img id="svg"  src="assets/img/viajes.svg"/>Viajes Chile</a>
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <!--carrusel imgs-->
-    <section id="carousel" class="d-none d-sm-block">
+    <section id="carousel" class="">
       <div id="carouselExample" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -164,6 +164,6 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-      <script src="assets/scripts/script.js"></script>
+      <script src="assets/js/script.js"></script>
 </body>
 </html>
